tests/errors/semantics/arg_param_struct_arg_type_mismatch.odl
pair_t :: struct(key_t: type, value_t: type) {
    key := key_t.{};
    value := value_t.{};
};

main :: () -> void {
    a := pair_t(10, int).{1, 1};
    a;
};
